--- a/css/responsive.css
+++ b/css/responsive.css
@@ -24,7 +24,7 @@
 
 @media screen and (max-width: 780px) {
   section {
-    padding: 80px 0 40px 0;
+    padding: 80px 0 40px;
   }
 
   .about-wrapper {
@@ -54,5 +54,34 @@
 
   .benefits .benefits_num {
     font-size: 45px;
+  }
+
+  .work-wrapper {
+    gap: 26px;
+  }
+
+  .work-wrapper > div {
+    width: calc(50% - 13px);
+  }
+
+  .work-wrapper > div > .work-item-num {
+    font-size: 35px;
+  }
+
+  .service-item .service-text {
+    font-size: 22px;
+  }
+
+  .service-item .service-arrow {
+    width: 30px;
+    height: 30px;
+  }
+
+  footer .footer-wrapper {
+    font-size: 25px;
+    letter-spacing: 10px;
+    width: 80%;
+    line-height: 3; /* defult 단위 em */
+    text-align: center;
   }
 }
